...
    ) {
        Box(
            modifier = Modifier
                .fillMaxWidth()
        ) {
            Text(
                text = "Add spending",
                modifier = Modifier
                    .padding(10.dp),
                fontFamily = FontFamily(Typeface.DEFAULT),
                fontSize = 28.sp,
            )
            Row(
...
                            }
                        }.start()
                    },
                    modifier = Modifier
                        .padding(1.dp)
                ) {
                    Text("Save")
                }
            }
        }
        TextField(
            value = spendingName,
            onValueChange = { newSpendingName -> spendingName = newSpendingName },
            placeholder = { Text(text = "Title") },
            modifier = Modifier
                .padding(10.dp)
                .fillMaxWidth()
        )
        TextField(
            value = selectedCategory,
            onValueChange = { selectedCategory = it },
            label = {
                Text(text = "Category")
            },
            modifier = Modifier
                .fillMaxWidth()
                .padding(10.dp)
        )
        TextField(
...
                            .replace(",", ".")
                            .replace("""^\.""".toRegex(), "0.")
                            .replace("""\.$""".toRegex(), ".00")
                        costValue = TextFieldValue(tempCostValue)
                    }
                }
                .testTag("addCost"),
            trailingIcon = {
                Text(
                    text = BackendService(preferences).getGroupById(if (groupId == 0L) preferences.groupId else groupId)
                        .getCurrency()
                )
            }
...
                    if (isGroupExpense) {
                        groupId = groupIdLast
                    } else {
                        groupIdLast = groupId
                        groupId = 0L
                    }
                    groupList = BackendService(preferences).getGroups()
                        .filter { group -> group.getId() != preferences.groupId }
                },
                modifier = Modifier
                    .align(Alignment.CenterVertically)
                    .testTag("groupExpenseCheckBox")
            )
            Text(
                text = "Group expense",
                modifier = Modifier
                    .align(Alignment.CenterVertically)
                    .fillMaxWidth()
...
                    onExpandedChange = {
                        expandedDropdownGroups = !expandedDropdownGroups
                    },
                    modifier = Modifier
                        .padding(10.dp)
                        .fillMaxWidth()
                        .testTag("groupSelectExpenseDropdown")
                ) {
                    TextField(
                        value = groupName,
                        onValueChange = { },
                        readOnly = true,
                        label = {
                            Text(text = "Group")
                        },
                        trailingIcon = {
                            ExposedDropdownMenuDefaults.TrailingIcon(
                                expanded = expandedDropdownGroups
                            )
                        },
...
